--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,4 @@
-name = "JuliaShipMMG"
+name = "ShipMMG"
 uuid = "37f2b0bf-0c13-4883-8808-e75eb56597e7"
 authors = ["Taiga MITSUYUKI <mitsuyuki-taiga-my@ynu.ac.jp>"]
 version = "0.0.1"
