--- a/Project.toml
+++ b/Project.toml
@@ -20,6 +20,7 @@ DifferentialEquations = "6.15"
 LaTeXStrings = "1.2"
 ParameterizedFunctions = "5.6"
 Plots = "1.6"
+Revise = "3"
 Sundials = "4.3"
 julia = "1"
 
