--- a/Project.toml
+++ b/Project.toml
@@ -17,6 +17,7 @@ Sundials = "c3572dad-4567-51f8-b174-8c6c989267f4"
 [compat]
 Dierckx = "0.5"
 DifferentialEquations = "6.15"
+Documenter = "0.27"
 LaTeXStrings = "1.2"
 ParameterizedFunctions = "5.6"
 Plots = "1.6"
