--- a/Project.toml
+++ b/Project.toml
@@ -16,6 +16,7 @@ Turing = "fce5fe82-541a-59a6-adf8-730c64b5f9a0"
 [compat]
 Dierckx = "0.5"
 DifferentialEquations = "6.15"
+DynamicPPL = "0.16"
 ParameterizedFunctions = "5.6"
 Parameters = "0.12"
 Plots = "1.6"
