--- a/Project.toml
+++ b/Project.toml
@@ -19,6 +19,7 @@ DifferentialEquations = "6.15"
 ParameterizedFunctions = "5.6"
 Parameters = "0.12"
 Plots = "1.6"
+Turing = "0.19"
 julia = "1"
 
 [extras]
