--- a/Project.toml
+++ b/Project.toml
@@ -16,7 +16,9 @@ Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Turing = "fce5fe82-541a-59a6-adf8-730c64b5f9a0"
 
 [compat]
+AdvancedPS = "0.2.4"
 Libtask_jll = "0.3 - 0.5"
+Libtask = "0.4"
 Dierckx = "0.5"
 DifferentialEquations = "6.15"
 Distributions = "0.25"
@@ -24,7 +26,7 @@ ParameterizedFunctions = "5.6"
 Parameters = "0.12"
 Plots = "1.6"
 Turing = "0.19"
-julia = "1"
+julia = "^1.6"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
