--- a/Project.toml
+++ b/Project.toml
@@ -19,11 +19,10 @@ AdvancedPS = "0.2.4"
 Dierckx = "0.5"
 DifferentialEquations = "6.15"
 Distributions = "0.25"
-Libtask = "0.5.3"
 ParameterizedFunctions = "5.6"
 Parameters = "0.12"
 Plots = "1.6"
-julia = "1.6"
+julia = "^1.3"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
