--- a/Project.toml
+++ b/Project.toml
@@ -22,6 +22,7 @@ Distributions = "0.25"
 ParameterizedFunctions = "5.6"
 Parameters = "0.12"
 Plots = "1.6"
+Turing = "0.19"
 julia = "^1.3"
 
 [extras]
