CompatHelper: bump compat for Libtask to 0.6, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -19,7 +19,7 @@ AdvancedPS = "0.2.4"
 Dierckx = "0.5"
 DifferentialEquations = "6.15"
 Distributions = "0.25"
-Libtask = "0.5"
+Libtask = "0.5, 0.6"
 ParameterizedFunctions = "5.6"
 Parameters = "0.12"
 Plots = "1.6"
