--- a/Project.toml
+++ b/Project.toml
@@ -17,7 +17,7 @@ Turing = "fce5fe82-541a-59a6-adf8-730c64b5f9a0"
 [compat]
 AdvancedPS = "0.2.4"
 Dierckx = "0.5"
-DifferentialEquations = "6.15"
+DifferentialEquations = "6.15, 7"
 Distributions = "0.25"
 Libtask = "0.5, 0.6"
 ParameterizedFunctions = "5.6"
