--- a/Project.toml
+++ b/Project.toml
@@ -21,7 +21,7 @@ Distributions = "0.25"
 ParameterizedFunctions = "5.6"
 Parameters = "0.12"
 Plots = "1.6"
-julia = "^1.3"
+julia = "1.6"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
