--- a/Project.toml
+++ b/Project.toml
@@ -18,6 +18,7 @@ Turing = "fce5fe82-541a-59a6-adf8-730c64b5f9a0"
 Dierckx = "0.5"
 DifferentialEquations = "6.15"
 Distributions = "0.25"
+Libtask = "0.6"
 ParameterizedFunctions = "5.6"
 Parameters = "0.12"
 Plots = "1.6"
