--- a/Project.toml
+++ b/Project.toml
@@ -21,6 +21,7 @@ Distributions = "0.25"
 ParameterizedFunctions = "5.6"
 Parameters = "0.12"
 Plots = "1.6"
+Turing = "0.20"
 julia = "1.6"
 
 [extras]
