--- a/Project.toml
+++ b/Project.toml
@@ -15,15 +15,15 @@ Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Turing = "fce5fe82-541a-59a6-adf8-730c64b5f9a0"
 
 [compat]
-AdvancedPS = "0.3, 0.4"
+AdvancedPS = "^0.4"
 Dierckx = "0.5"
-DifferentialEquations = "6.15, 7"
-Distributions = "0.25"
-Libtask = "0.7, 0.8"
-ParameterizedFunctions = "5.6"
+DifferentialEquations = "^7"
+Distributions = "^0.25"
+Libtask = "^0.8"
+ParameterizedFunctions = "^5.12"
 Parameters = "0.12"
-Plots = "1.6"
-Turing = "0.20, 0.21"
+Plots = "^1"
+Turing = "^0.24"
 julia = "^1.6"
 
 [extras]
