--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       matrix:
         julia-version: ['1']
-        julia-arch: [x64, x86]
+        julia-arch: [x64]
         os: [ubuntu-latest]
 
     steps:
