add annotate true

--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -26,5 +26,5 @@ jobs:
           arch: ${{ matrix.julia-arch }}
       - uses: julia-actions/julia-buildpkg@v1
       - uses: julia-actions/julia-runtest@v1
-        # with:
-        #   annotate: true
+        with:
+          annotate: true
