--- a/Project.toml
+++ b/Project.toml
@@ -20,6 +20,8 @@ AdvancedPS = "^0.4"
 Dierckx = "0.5"
 DifferentialEquations = "^7"
 Distributions = "^0.25"
+ForwardDiff = "^0.10"
+KernelDensity = "^0.6"
 Libtask = "^0.8"
 ParameterizedFunctions = "^5.12"
 Parameters = "0.12"
