--- a/Project.toml
+++ b/Project.toml
@@ -9,11 +9,14 @@ Dierckx = "39dd38d3-220a-591b-8e3c-4c3a8c710a94"
 DifferentialEquations = "0c46a032-eb83-5123-abaf-570d42b7fbaa"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
+Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
+JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 KernelDensity = "5ab0869b-81aa-558d-bb23-cbf5423bbe9b"
 Libtask = "6f1fad26-d15e-5dc8-ae53-837a1d7b8c9f"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 ParameterizedFunctions = "65888b18-ceab-5e60-b2b9-181511a3b968"
 Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
+ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 Turing = "fce5fe82-541a-59a6-adf8-730c64b5f9a0"
 
 [compat]
@@ -22,10 +25,13 @@ Dierckx = "0.5"
 DifferentialEquations = "^7"
 Distributions = "^0.25"
 ForwardDiff = "^0.10"
+Ipopt = "1.10.6"
+JuMP = "1.26.0"
 KernelDensity = "^0.6"
 Libtask = "^0.8"
 ParameterizedFunctions = "^5.12"
 Parameters = "0.12"
+ProgressMeter = "1.10.4"
 Turing = "^0.36"
 julia = "^1.6"
 
